--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -4,19 +4,19 @@
     max-height: 799px;
     padding: 103px 0 95px 0;
     &_bg-img1{
-        background: url('../../img/header_slider/slidepic1.jpg') center (center/cover) no-repeat;
+        background: url('../img/header_slider/slidepic1.jpg') center (center/cover) no-repeat;
     }
     &_bg-img2{
-        background: url('../../img/header_slider/slidepic2.jpg') center (center/cover) no-repeat;
+        background: url('../img/header_slider/slidepic2.jpg') center (center/cover) no-repeat;
     }
     &_bg-img3{
-        background: url('../../img/header_slider/slidepic3.jpg') center (center/cover) no-repeat;
+        background: url('../img/header_slider/slidepic3.jpg') center (center/cover) no-repeat;
     }
     &_bg-img4{
-        background: url('../../img/header_slider/slidepic4.jpg') center (center/cover) no-repeat;
+        background: url('../img/header_slider/slidepic4.jpg') center (center/cover) no-repeat;
     }
     &_bg-img5{
-        background: url('../../img/header_slider/slidepic5.jpg') center (center/cover) no-repeat;
+        background: url('../img/header_slider/slidepic5.jpg') center (center/cover) no-repeat;
     }
     &__logo {
         display: block;
