--- a/src/sass/blocks/_media.scss
+++ b/src/sass/blocks/_media.scss
@@ -181,6 +181,7 @@
         }
     }
     .information {
+        background: #fae8d8;
         padding: 25px 0 0px 0;
         .title {
             padding-bottom: 5px;
@@ -189,7 +190,7 @@
             display: flex;
             justify-content: center;
             text-align: center;
-            height: 240px;
+            height: 200px;
             a img {
                 padding-left: 4px;
                 height: 17px;
@@ -197,8 +198,12 @@
             &__img {
                 display: none;
             }
+            &__descr {
+                text-align: center;
+            }
         }
         &__welcome {
+            margin-bottom: 50px;
             &__logo {
                 width: 60px;
                 padding-left: 10px;
@@ -209,4 +214,36 @@
             }
         }
     }
+    .title_divider:after, .title_divider:before {
+        top: -10px;
+    }
+    .reviews {
+        height: 840px;
+    }
+    .reviews__carousel__dot {
+        width: 25px;
+    }
+    .reviews__carousel .arrow-next__wrapper, .reviews__carousel .arrow-prev__wrapper {
+        width: 50%;
+    }
+    .assortment {
+        background: #fae8d8;
+    }
+    .stuff {
+        background: #fae8d8;
+    }
+    .stuff__item {
+        height: 590px;
+        margin-bottom: 2vh;
+    }
+    .stuff__descr div {
+        margin-top: 5px;
+    }
+    .stuff__descr {
+        margin-top: 5px;
+    }
+    .stuff__dots {
+        margin-top: 10px;
+    }
 }
+
